Fixed glitch with header cat image being too large

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -112,6 +112,12 @@ hr {
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
+.responsive-image {
+    max-width: 100%;
+    display:block;
+    height: auto;
+}
+
 /* Helpers */
 
 .mt {
